# tvbox-desktop

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cache.rs  douban.rs  live.rs  mod.rs  player.rs  prefetch.rs  search.rs  subscription.rs  vod.rs
src-tauri/src/examples/: segment_bench.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: ad_blocker.rs  auete.rs  douban.rs  guard.rs  guard_jpj.rs  guard_jpys.rs  jianpian.rs  libvio.rs  mod.rs  parser.rs  playback_cache.rs  playback_runtime.rs  playback_types.rs  resolver.rs  search.rs  segment_cache.rs  storage.rs  tvbox.rs  wencai.rs  xb6v.rs  zxzj.rs
src-tauri/src/services/provider/: aliso_scraper.rs  anime1_scraper.rs  auete_scraper.rs  baibai_scraper.rs  bili_scraper.rs  biliych_scraper.rs  bite_scraper.rs  cc_scraper.rs  changzhang_scraper.rs  cms_provider.rs  ddrk_scraper.rs  diagnostic_check.rs  dm84_scraper.rs  fan_scraper.rs  huanshi_scraper.rs  jianpian_scraper.rs  kkss_scraper.rs  kuasou_scraper.rs  libvio_scraper.rs  lite_apple_scraper.rs  mengmi_scraper.rs  miso_scraper.rs  mod.rs  native.rs  nuomi_scraper.rs  rebo_scraper.rs  registry.rs  scraper_tests.rs  spider_provider.rs  traits.rs  uuss_scraper.rs  wencai_scraper.rs  xb6v_scraper.rs  xiongdi_scraper.rs  (+8 more)
src-tauri/tests/: segment_timing.rs
src-tauri/tests/fixtures/: tvbox_config.json
(+178 files in other folders)
